package model;

public enum EtatDeclaration {
    BROUILLON,
    ENREGISTREE,
    RESOLUE
}
