package model;

public enum RoleDeclarant {
    VICTIME,
    TEMOIN,
    VICTIME_ET_TEMOIN
}
