@startuml
skinparam classAttributeIconSize 0
skinparam shadow false
skinparam linetype ortho
skinparam defaultFontName "Segoe UI"

skinparam nodesep 100
skinparam ranksep 80
skinparam packagePadding 20

skinparam package {
    BackgroundColor #F4F6F7
    BorderColor #BDC3C7
    FontColor #7F8C8D
    FontSize 13
    FontStyle bold
}

skinparam class {
    BackgroundColor White
    BorderColor #2C3E50
    ArrowColor #2C3E50
}

' ==========================================
' PACKAGE TECHNIQUE
' ==========================================
package "Pattern_Observer" {
    interface "IObservateur" {
        + update(objet : ObjetTrouve)
    }

    interface "ISujet" {
        + enregistrerObs(o : IObservateur)
        + supprimerObs(o : IObservateur)
        + notifierObs(objet : ObjetTrouve)
    }
}

' ==========================================
' PACKAGE MODELE (DONNÉES)
' ==========================================
package "Modele" {

    abstract class Utilisateur {
        - nom : String
        - prenom : String
    }

    class Declarant {
        - numCNI : String
        - adresse : String
        - telephone : String
    }

    enum RoleDeclarant {
        VICTIME
        TEMOIN
        VICTIME_ET_TEMOIN
    }

    enum EtatDeclaration {
        BROUILLON
        ENREGISTREE
        RESOLUE
    }

    class LieuVol {
        - rue : String
        - ville : String
        - codePostal : String
        - complement : String
    }

    class ObjetTrouve {
        - type : String
        - marque : String
        - couleur : String
        - description : String
    }

    abstract class Declaration {
        - id : int

        - dateCreation : Date
        - dateDerniereModif : Date
        - dateResolution : Date

        - dateVol : Date
        - heureVol : Time
        - lieuVol : LieuVol

        - etat : EtatDeclaration
        - roleDeclarant : RoleDeclarant

        - description : String
        - couleur : String
        - marque : String

        + editer(nouvellesInfos : String)
        + validerSauvegarde()
        + update(objet : ObjetTrouve)
        + correspondA(objet : ObjetTrouve) : boolean
    }

    class DeclarationVelo {
        - numeroSerie : String
    }

    class DeclarationVehicule {
        - matricule : String
        - modele : String
    }

    class Notification {
        - date : Date
        - message : String
        - estLue : boolean
    }

    class RQV {
        - dateRapport : Date
        / listeNouvelles : List<Declaration>
        / listeModifiees : List<Declaration>
        / listeResolues : List<Declaration>
    }
}

' ==========================================
' PACKAGE CONTROLEUR (LOGIQUE)
' ==========================================
package "Controleur" {

    class AgentPolicier {
        - matricule : String
        - motDePasse : String
        + sAuthentifier() : boolean
    }

    class GestionnaireSysteme {
        - declarations : List<Declaration>
        - objetsTrouves : List<ObjetTrouve>
        - observateurs : List<IObservateur>
        - notifications : List<Notification>

        + creerDeclaration(d : Declaration, u : Declarant)
        + genererRQV(date : Date) : RQV
        + ajouterObjetTrouve(o : ObjetTrouve)

        + enregistrerObs(o : IObservateur)
        + supprimerObs(o : IObservateur)
        + notifierObs(objet : ObjetTrouve)

        + creerNotification(d : Declaration, o : ObjetTrouve) : Notification
    }
}

' ==========================================
' RELATIONS
' ==========================================

Declarant -up-|> Utilisateur
AgentPolicier -up-|> Utilisateur

DeclarationVelo -up-|> Declaration
DeclarationVehicule -up-|> Declaration

Declaration .up.|> IObservateur
GestionnaireSysteme .up.|> ISujet

Declarant "1" -- "0..*" Declaration : "Auteur"

GestionnaireSysteme "1" o-- "0..*" Declaration : "Stocke"
GestionnaireSysteme "1" *-- "0..*" ObjetTrouve : "Gère"
GestionnaireSysteme ..> RQV : "Fabrique"

' Lieu du vol : fait partie de la déclaration
Declaration "1" *-- "1" LieuVol : "LieuVol"

' Notification = message envoyé au déclarant, lié à une déclaration
Declarant "1" *-- "0..*" Notification : "Reçoit"
Notification "0..*" --> "1" Declaration : "Concerne"
Notification "0..*" --> "1" ObjetTrouve : "DéclenchéePar"

AgentPolicier -right-> GestionnaireSysteme : "Utilise"

' Liens explicites (pour que les enums soient "reliés" visuellement)
Declaration ..> EtatDeclaration
Declaration ..> RoleDeclarant

note bottom of Declaration
  correspondA() compare avec ObjetTrouve.
  update() est l’appel Observer.
  dateVol/heureVol/lieuVol = infos du vol.
end note

@enduml
